<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey" >

        <TextView
            android:id="@+id/RightPaneTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/product_list_search_results"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/milk" />
    </FrameLayout>

    <TextView
        android:id="@+id/CriteriaTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spaceholder"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/CriteriaMinDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/MinPriceInputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:imeOptions="actionNext"
                android:inputType="number" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/CriteriaMaxDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/MaxPriceInputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="number" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>